Fix missing space in the listing card heading title when the author logo is hidden

--- a/assets/css/public-main.rtl.css
+++ b/assets/css/public-main.rtl.css
@@ -17642,6 +17642,9 @@ input.directorist-toggle-input:checked + .directorist-toggle-input-label span.di
      object-fit: cover;
   border-radius: 10px;
 }
+.map-listing-card-single__author + .map-listing-card-single__content {
+  padding-top: 0;
+}
 .map-listing-card-single__author a {
   width: 42px;
   height: 42px;
@@ -17661,7 +17664,7 @@ input.directorist-toggle-input:checked + .directorist-toggle-input-label span.di
   border-radius: 100%;
 }
 .map-listing-card-single__content {
-  padding: 0 10px 10px;
+  padding: 15px 10px 10px;
 }
 .map-listing-card-single__content__title {
   font-size: 16px;
